fixed layout on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -71,35 +71,3 @@ code {
 .blue-progress {
   background: rgb(45, 153, 241);
 }
-
-/* IDK what this media query be doing and why I added them*/
-@media (width > 2200px) {
-  .shrinked {
-    margin-left: 15%;
-    margin-right: 15%;
-  }
-}
-@media (width > 2600px) {
-  .shrinked {
-    margin-left: 25%;
-    margin-right: 25%;
-  }
-}
-@media (width > 3300px) {
-  .shrinked {
-    margin-left: 35%;
-    margin-right: 35%;
-  }
-}
-@media (width > 3700px) {
-  .shrinked {
-    margin-left: 37%;
-    margin-right: 37%;
-  }
-}
-@media (width > 3900px) {
-  .shrinked {
-    margin-left: 40%;
-    margin-right: 40%;
-  }
-}
